--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": false
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
@@ -27,9 +30,16 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+               "node_modules/bootstrap/dist/css/bootstrap.min.css",
+                "node_modules/prismjs/themes/prism.css"
             ],
-            "scripts": []
+            "scripts": [
+               "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
+               "node_modules/prismjs/prism.js",
+                "node_modules/prismjs/plugins/toolbar/prism-toolbar.js",
+                "node_modules/prismjs/plugins/copy-to-clipboard/prism-copy-to-clipboard.js"
+            ]
           },
           "configurations": {
             "production": {
